# PaddleOCR

./: pyproject.toml  requirements.txt
deploy/slim/quantization/: quant.py
ppocr/data/imaug/: __init__.py  rec_cus_aug.py
ppocr/modeling/backbones/: rec_lcnetv3.py
ppocr/utils/: checkpointer.py  save_load.py
ppocr/utils/dict/: vi_dict.txt
tools/: program.py
